@@ -41,6 +41,9 @@ javafx {
 dependencies {
     implementation 'com.google.code.gson:gson:2.8.6'
 
+//    // https://mvnrepository.com/artifact/org.xerial/sqlite-jdbc
+//    compile group: 'org.xerial', name: 'sqlite-jdbc', version: '3.28.0'
+
     // https://mvnrepository.com/artifact/org.xerial/sqlite-jdbc
     compile group: 'org.xerial', name: 'sqlite-jdbc', version: '3.28.0'
 }
@@ -53,6 +56,26 @@ repositories {
 
 def newArgs = [ '--add-exports','java.desktop/com.apple.eawt=ALL-UNNAMED', '--add-opens', 'javafx.graphics/javafx.css=de.jensd.fx.fontawesomefx.commons',]
 
+jlink {
+
+    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
+    launcher {
+        name = 'whatwebfx'
+        jvmArgs = [ '--add-exports','java.desktop/com.apple.eawt=ALL-UNNAMED',
+                    '--add-opens', 'javafx.graphics/javafx.css=de.jensd.fx.fontawesomefx.commons',]
+    }
+
+    jpackage {
+        if (javafx.getPlatform().name() == "OSX") {
+            installerType = "dmg"
+            jpackageHome = "/Users/<user>/Downloads/jdk-13.jdk/Contents/Home"
+        } else if (javafx.getPlatform().name() == "WINDOWS") {
+            installerType = "exe"
+            jpackageHome = "C:\\Users\\Gorka\\.sdkman\\candidates\\java\\15.0.1.hs-adpt"
+            installerOptions = ['--win-menu', '--win-shortcut', '--win-dir-chooser']
+        }
+    }
+}
 run {
     inputs.property('moduleName', moduleName)
     doFirst {
